<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollViewDebug"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true" >

        <TextView
            android:id="@+id/outputzone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|left"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/action1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uitDebugAction1" />

        <Button
            android:id="@+id/action2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uitDebugAction2" />

        <Button
            android:id="@+id/action3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uitDebugAction3" />

    </LinearLayout>

</LinearLayout>
