<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:orientation="vertical" 
    android:focusable="true"
	android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/cmdMainValidation"
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/uitMainValidation"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/cmdMainInventory"
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/uitMainInventory"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/cmdMainDistribution"
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/uitMainDistribution"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />

        <Button
            android:id="@+id/cmdMainDebug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uitMainDebug" />

    </LinearLayout>
        
</LinearLayout>